--- a/package.json
+++ b/package.json
@@ -9,7 +9,16 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@emailjs/browser": "^3.10.0",
+    "@react-three/drei": "^9.57.1",
+    "@react-three/fiber": "^8.12.0",
+    "@react-three/postprocessing": "^2.7.0",
+    "gh-pages": "^5.0.0",
+    "prop-types": "^15.8.1",
+    "react-simple-maps": "^3.0.0",
+    "styled-components": "^5.3.8",
+    "three": "^0.150.1"
   },
   "scripts": {
     "start": "react-scripts start",
